alteração em todo backend alterando segurança, acrescentando entidade agendamento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,10 @@
-spring.application.name=residuos
+spring.datasource.url=jdbc:mysql://localhost:3306/residuos?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=100903
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-# Configuração do banco de dados H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.h2.Driver
-
-# Configura o H2 para inicializar com o banco de dados em memória
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# Configuração do JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-
-# Configuração do logging do SQL
-spring.jpa.properties.hibernate.format_sql=true
 
 server.port=9090
